// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object Field Test: locationField 1`] = `
<div>
  <input
    onChange={[Function]}
    type="number"
  />
  <input
    onChange={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to invalid 1`] = `
<div>
  <input
    onChange={[Function]}
    type="number"
    value={NaN}
  />
  <input
    onChange={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to otherValidLocation 1`] = `
<div>
  <input
    onChange={[Function]}
    type="number"
    value={767}
  />
  <input
    onChange={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to validLocation 1`] = `
<div>
  <input
    onChange={[Function]}
    type="number"
    value={41}
  />
  <input
    onChange={[Function]}
    type="number"
  />
</div>
`;
